# Serverless-sample-apps

./: Dockerfile  LICENSE  Makefile  README.md  go.mod
cmd/http_server/: main.go
cpp/: reader.cpp
install/: http_server.yaml
python/: test_bert.sh  tf_client.py
python/bert/onnx/: download.py  download.sh
python/bert/pyt/: bert_handler.py  download.py  input.json  run_torch_server.sh
python/bert/tensorrt/: builder.py  download.sh  inference.py
python/bert/tf/: client.py  download.py  input.json  run.sh
python/opt/: CMakeLists.txt  download.py  download_and_trace.py  inference.cpp
